--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,19 +1,7 @@
 name: personal_dev_portfolio
 description: My Personal Development Portfolio Made With Flutter.
 
-
-
-publish_to: "none" 
-
-
-
-
-
-
-
-
-
-
+publish_to: "none"
 
 version: 1.0.0+1
 
@@ -23,55 +11,24 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-  
-  
   cupertino_icons: ^1.0.4
   google_fonts: ^2.3.1
   flutter_svg: ^1.0.3
   animated_text_kit: ^4.2.1
+  font_awesome_flutter: ^10.1.0
+  get: ^4.6.1
+  url_launcher: ^6.0.20
+  animated_theme_switcher: ^2.0.6
+  firebase_core: ^1.13.1
+  cloud_firestore: ^3.1.10
+  firebase_storage: ^10.2.9
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-
-
-
-
 flutter:
-  
-  
-  
   uses-material-design: true
-
-  
   assets:
     - assets/icons/
     - assets/images/
-
-  
-  
-
-  
-  
-
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
