--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,9 +19,10 @@ dependencies:
   get: ^4.6.1
   url_launcher: ^6.0.20
   animated_theme_switcher: ^2.0.6
-  firebase_core: ^1.13.1
-  cloud_firestore: ^3.1.10
-  firebase_storage: ^10.2.9
+  firebase_core: ^1.14.1
+#  cloud_firestore: ^3.1.10
+#  firebase_storage: ^10.2.9
+  url_strategy: ^0.2.0
 
 dev_dependencies:
   flutter_test:
